# libbpf-demo

./: .gitignore  README.md
examples/c/: hello.bpf.c  hello.c
examples/test/: CMakeLists.txt  build.sh  exec.bpf.c  exec.cc  exec.h  hello.bpf.c  hello.c  kprobe.bpf.c  kprobe.c  kprobe.cc  kprobe.h  uprobe.bpf.c  uprobe.c  uprobe.cc  uprobe_symbol.bpf.c  uprobe_symbol.cc  uprobe_symbol.h  utils.h
examples/test/proto/: CMakeLists.txt  symbol.proto
examples/test/utest/: CMakeLists.txt  usymbol.cc  utest.cc  utest_class.cc  utest_class.h
